<resources>
    <string name="app_name">DiabetesControl</string>
    <dimen name="avatar_icon_size">62dp</dimen>
    <string name="title_activity_principal_detail_host">principalDetailHostActivity</string>
    <string name="title_principal_list">Items</string>
    <string name="title_principal_detail">principal Detail</string>
    <string name="title_activity_navegacion">Navegacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Elementos Agendar cita -->
    <string name="date">Fecha:</string>
    <string name="time">Hora</string>
    <!-- Error agendando cita -->
    <string name="error_type">Debes seleccionar un tipo de consulta</string>
    <string name="error_date">Debes seleccionar una fecha</string>
    <string name="error_time">Debes seleccionar una hora</string>
    <string name="confirm_date">¿Guardar cita?</string>
    <string name="select_schedule_date">Selecciona una consulta</string>
    <string name="empty_dates">Aún no haz Seleccionado hora de consulta :(</string>
    <string name="update_date">Cambiar fecha de cita</string>
    <string name="cancel_date">Cancelar cita</string>
    <string name="try_again">Intentar de nuevo</string>
    <string name="date_schedule_date">Fecha que se realizó la cita</string>
    <string name="schedule_date">Recordad cita</string>
    <string name="tipo_consulta">Tipo de consulta</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">  </string>
    <string name="fechatoma">Fecha de toma</string>
    <string name="fechat">Escribe la fecha de la toma de glucosa</string>
    <string name="filtrar">Filtrar Resultados</string>
    <string name="cosultar">Cosultar</string>
    <string name="horatoma">Hora de toma</string>
    <string name="horat">Escribe la hora de la toma de glucosa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="body_mass_index_bmi">Indice de Masa Corporal imc</string>
    <string name="weight">Peso :</string>
    <string name="height">Altura :</string>
    <string name="in_meters">En Metros</string>
    <string name="calculate_bmi">calcular imc</string>
    <string name="Empty_fields">Los campos  no pueden estar vacios</string>
    <string name="zero_values">Los valores no pueden ser cero</string>
    <string name="under_weight">El IMC es muy bajo</string>
    <string name="normal_weight">Tu IMC esta dentro de los normal </string>
    <string name="overweight">Tu IMC indica sobrepeso</string>
    <string name="type_1_obesity">Tu IMC indica obesidad tipo 1</string>
    <string name="type_2_obesity">Tu IMC indica obesidad tipo 2</string>
    <string name="type_3_obesity">Tu IMC indica obesidad tipo 3</string>
    <string name="bmi_result_format">El resultado de tu IMC es este: %.2f</string>

    <string name="channel_name">Nombre_del_canal</string>
    <string name="channel_description">Descripción_del_canal</string>


    <string name="delete_data">Limpiar datos</string>
    <string name="bmi">IMC :</string>
    <string name="description">Descripción :</string>
    <string name="in_kilograms">En Kilogramos</string>
    <string name="weight_index">Registro de peso</string>
    <string name="imagebascula">Cuida tu peso</string>
    <string name="save_button">Guardar peso</string>
    <string name="recordatorio_de_citas_m_dicas">Recordatorio de Citas Médicas</string>
    <string name="crear_alarma">Crear Alarma</string>
    <string name="ingresa_la_hora_de_tu_proxima_cita">Ingresa la hora de tu proxima cita</string>
    <string name="ingresa_la_fecha_de_tu_proxima_cita">Ingresa la fecha de tu proxima cita</string>
    <string name="fecha_de_peso">Fecha de peso</string>
    <string name="nivel_de_glucosa">Nivel de Glucosa</string>
    <string name="tipo_de_toma_de_glucosa">Tipo de Toma de glucosa</string>
    <string name="hora">Hora</string>
    <string name="registro_de_glucosa">Registro de glucosa</string>
    <string name="registro_glucosa">Registro Glucosa</string>
    <string name="registro_peso">Registro Peso</string>
    <string name="registro_de_nuevo_usuario">Registro de Nuevo Usuario</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="conoce_las_mejores_maneras_de_cuidarte_con_estas_recomendaciones">Conoce las mejores maneras de cuidarte con estas recomendaciones</string>
    <string name="ingresa_los_datos_de_tu_cuenta">Ingresa los datos de tu cuenta.</string>
    <string name="inicio_de_sesion">Inicio de sesión</string>
    <string name="regresar">Regresar</string>
    <string name="user_profile">user_profile</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="ingresa_con_tu_hella_digital">Ingresa con tu hella digital.</string>
    <string name="olvidaste_tu_contrase_a_presiona_aqu">Olvidaste tu contraseña? Presiona aquí</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ya_tienes_cuenta_presiona_aqui_e_ingresa">Ya tienes cuenta? presiona aqui e Ingresa</string>
    <string name="escribe_una_nota_para_este_recordatorio">Escribe una nota para este recordatorio</string>
    <string name="programa_tu_recordaorio_al_menos_1_hora_antes_de_tu_cita">Programa tu recordaorio al menos 1 hora antes de tu cita</string>
    <string name="si_no_recuerdas_tus_citas_puedes_consultarlas_aqui">Si no recuerdas tus citas puedes consultarlas aqui</string>
    <string name="consultar_citas">Consultar Citas</string>
    <string name="crear_recordatorio">Crear Recordatorio</string>
    <string name="aqui_puedes_registrar_tus_cifras_de_glucosa_y_llevar_un_mejor_control_si_necesitas_ayuda_para_saber_como_se_toma_la_glucosa_presiona_el_boton_saber_mas">Aqui puedes registrar tus cifras de glucosa y llevar un mejor control, si necesitas ayuda para saber como se toma la glucosa presiona el boton: Saber mas.</string>
    <string name="saber_mas">Saber mas</string>
    <string name="hora_de_toma">Hora de toma</string>
    <string name="selecciona_la_hora">selecciona la hora</string>
    <string name="selecciona_la_fecha">selecciona la fecha</string>
    <string name="_0">0</string>
    <string name="mg_dl">Mg/dL</string>



</resources>