<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoazul"
    tools:context=".Navegacion">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/linear_layout_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recordatorio_de_citas_m_dicas"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="36dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="80dp"
                android:contentDescription="@string/schedule_date"
                app:srcCompat="@drawable/ic_agenda" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:textColor="#F6F6F6"
                android:textSize="17sp"
                android:text="@string/tipo_consulta" />

            <Spinner
                android:id="@+id/spinnerType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:spinnerMode="dialog"
                android:background="@drawable/rounded_edittext_background"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textViewType"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_type"
                android:visibility="gone"
                tools:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#F6F6F6"
                android:text="@string/date"
                android:textSize="17sp"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldFecha"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="#000000"
                android:hint="@string/ingresa_la_fecha_de_tu_proxima_cita">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewDate"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_date"
                android:visibility="gone"
                tools:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="17sp"
                android:textColor="#F6F6F6"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldHora"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/ingresa_la_hora_de_tu_proxima_cita"
                android:textColorHint="#000000"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewTime"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_time"
                android:visibility="gone"
                tools:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nota"
                android:textSize="17sp"
                android:textColor="#F6F6F6"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldNota"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/escribe_una_nota_para_este_recordatorio"
                android:textColorHint="#000000"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="text" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textView8"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:textColor="#F6F6F6"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:text="@string/programa_tu_recordaorio_al_menos_1_hora_antes_de_tu_cita" />

            <Button
                android:id="@+id/buttonCrearAlarma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crear_recordatorio"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:padding="16dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/si_no_recuerdas_tus_citas_puedes_consultarlas_aqui" />

            <LinearLayout
                android:id="@+id/linearLayoutHistoricControl"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true">


                <Button
                    android:id="@+id/cosulacitas"
                    android:layout_width="5sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/consultar_citas"
                    app:backgroundTint="#569845" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewcita"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorUno"/>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>