<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/reloj"
            android:title="Recordatorio Citas Meddicas" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/historial"
            android:title="Historial de Cifras de Glucosa" />
        <item
            android:id="@+id/registroGlucosa"
            android:icon="@drawable/glucometro"
            android:title="@string/registro_glucosa" />
        <item
            android:id="@+id/registroPeso2"
            android:icon="@drawable/bascula"
            android:title="@string/registro_peso" />
        <item
            android:id="@+id/registroTomaMedicamentos"
            android:icon="@drawable/medicamen"
            android:title="Registro de Toma de Medicamentos" />
    </group>
</menu>