<?xml version="1.0" encoding="utf-8"?>
<ScrollView

 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/fondologin"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicio_de_sesion"
        android:textAlignment="center"
        android:textColor="@color/black"
        style="@style/SerifText"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntomonoregular"
        android:textColor="#000000"
        android:textSize="18sp"
        android:text="@string/ingresa_los_datos_de_tu_cuenta"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="386dp"
        android:layout_height="108dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logindiabetes"
         />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint=" Ingresa Email"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:helperTextTextAppearance="@style/CustomHelperTextStyle"
        android:textColorHint="#000000"
        app:helperTextTextColor="#000000"
        app:helperText="*Requerido"
        app:errorTextAppearance="@style/CustomTextInputLayoutErrorTextAppearance"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext_background"

            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint=" Ingresa Password"
        app:helperTextTextAppearance="@style/CustomHelperTextStyle"

        android:textColorHint="#000000"
        app:helperTextTextColor="#000000"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:helperText="*Requerido"
        app:errorTextAppearance="@style/CustomTextInputLayoutErrorTextAppearance"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext_background"

            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/ingresar" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/registrar" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:text="@string/ingresa_con_tu_hella_digital"
            android:textAlignment="center" />

    <ImageButton
        android:id="@+id/huella"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:paddingRight="22dp"
        app:srcCompat="@drawable/botondigital"
        />

        <TextView
            android:id="@+id/recuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/olvidaste_tu_contrase_a_presiona_aqu"
            android:clickable="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:onClick="goToLoginActivity"/>


</LinearLayout>
    </ScrollView>